log/build_2021-07-02_19-19-07/py_topic/stdout_stderr.log
running egg_info
writing ../../build/py_topic/py_topic.egg-info/PKG-INFO
writing dependency_links to ../../build/py_topic/py_topic.egg-info/dependency_links.txt
writing entry points to ../../build/py_topic/py_topic.egg-info/entry_points.txt
writing requirements to ../../build/py_topic/py_topic.egg-info/requires.txt
writing top-level names to ../../build/py_topic/py_topic.egg-info/top_level.txt
reading manifest file '../../build/py_topic/py_topic.egg-info/SOURCES.txt'
writing manifest file '../../build/py_topic/py_topic.egg-info/SOURCES.txt'
running build
running build_py
copying py_topic/py_sub_spiral.py -> /home/rockey/ros2_ws/build/py_topic/build/lib/py_topic
running install
running install_lib
copying /home/rockey/ros2_ws/build/py_topic/build/lib/py_topic/py_sub_spiral.py -> /home/rockey/ros2_ws/install/py_topic/lib/python3.8/site-packages/py_topic
byte-compiling /home/rockey/ros2_ws/install/py_topic/lib/python3.8/site-packages/py_topic/py_sub_spiral.py to py_sub_spiral.cpython-38.pyc
  File "/home/rockey/ros2_ws/install/py_topic/lib/python3.8/site-packages/py_topic/py_sub_spiral.py", line 41
    def__init__(self):
                     ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/rockey/ros2_ws/install/py_topic/lib/python3.8/site-packages/py_topic-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/py_topic/py_topic.egg-info to /home/rockey/ros2_ws/install/py_topic/lib/python3.8/site-packages/py_topic-0.0.0-py3.8.egg-info
running install_scripts
Installing py_pub_spiral script to /home/rockey/ros2_ws/install/py_topic/lib/py_topic
Installing py_sub_spiral script to /home/rockey/ros2_ws/install/py_topic/lib/py_topic
writing list of installed files to '/home/rockey/ros2_ws/build/py_topic/install.log'
